# NLP-learnings

./: .gitattributes  README.md  pyproject.toml
Projects/naive-bayes/: README.md  pyproject.toml
Projects/naive-bayes/Data/: preprocessed.csv
Projects/naive-bayes/notebooks/: Training.ipynb  preprocess.ipynb
Projects/text-toxicity-detection/: pyproject.toml
Projects/text-toxicity-detection/Data/: preprocessed.csv
Projects/text-toxicity-detection/notebooks/: Training.ipynb  preprocess.ipynb
