[tool.poetry]
name = "main"
version = "0.1.0"
description = "Main project package"
authors = ["rp-86 <rashmipawar921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
commitizen = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
