[tool.poetry]
name = "naive-bayes"
version = "0.1.0"
description = "project to study and implement naive bayes from scratch"
authors = ["rp-86 <rashmipawar921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
sklearn = "^0.0"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
