[tool.poetry]
name = "text-toxicity-detection"
version = "0.1.0"
description = "poetry env for the text toxicity detection project"
authors = ["Rashmi Pawar <rashmipawar921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
torch = "^1.12.0"
transformers = "^4.20.1"
seaborn = "^0.11.2"
ipykernel = "^6.15.1"
nltk = "^3.7"
contractions = "^0.1.72"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
